mini-tech-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-tech-svc
spec:
  selector:
    app: mini-tech
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
