mini-tech-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-tech-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mini-tech.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mini-tech-svc
                port:
                  number: 80
